🚀 feat(employments): implementa CRUD via modal com Hotwire para vínculos empregatícios (#2)
* docs: sincronizar documentação com o estado atual do código

* feat(employments): Implementa CRUD modal para vínculos empregatícios

Este commit introduz a funcionalidade completa de CRUD para vínculos empregatícios ('ContactEmployment') dentro de um modal, utilizando a stack Hotwire.

Principais alterações:

- Controller ('ContactEmploymentsController'): Totalmente refatorado para suportar Turbo Frames e Turbo Streams. As ações 'create', 'update' e 'destroy' agora respondem a requisições 'turbo_stream', atualizando a interface de forma reativa. A ação 'edit' foi adicionada para carregar o formulário de edição no modal.

- Views: O formulário de criação e edição foi centralizado no partial '_form.html.erb' e é carregado dentro de um modal ('_modal_form.html.erb'). As respostas Turbo Stream ('create.turbo_stream.erb', 'update.turbo_stream.erb', 'destroy.turbo_stream.erb') foram criadas para manipular o DOM, atualizando a lista de vínculos e fechando o modal sem a necessidade de recarregar a página. A view '_career_history.html.erb' foi atualizada para renderizar o formulário de novo vínculo diretamente na aba e para exibir a lista de vínculos.

- Rotas ('routes.rb'): A rota para 'edit' foi adicionada ao resource 'contact_employments'.

* refactor(employments): Integra formulário de vínculos aninhado no contato

Este commit refatora o formulário de contatos para incluir a gestão de vínculos empregatícios como um formulário aninhado ('nested form'), utilizando um controller Stimulus para adicionar e remover campos dinamicamente.

Principais alterações:

- Formulário de Contato ('_form.html.erb'): Adicionado um 'fieldset' para os vínculos, controlado pelo novo 'nested-form-controller' do Stimulus.

- Campos de Vínculo ('_contact_employment_fields.html.erb'): Partial que renderiza os campos para um único vínculo, incluindo um botão de remoção gerenciado pelo Stimulus.

- Adição 

--- a/app/views/contact_employments/_employment.html.erb
+++ b/app/views/contact_employments/_employment.html.erb
@@ -1,11 +1,15 @@
 <tr id="<%= dom_id(employment) %>">
   <td><%= employment.company ? link_to(employment.company.name, contact_path(employment.company)) : l(:label_none) %></td>
-  <td><%= employment.role %></td>
+  <td><%= employment.position %></td>
   <td><%= format_date(employment.start_date) %></td>
   <td><%= format_date(employment.end_date) %></td>
   <td class="buttons">
+    <%= link_to l(:button_edit),
+                edit_contact_employment_path(employment),
+                class: 'icon icon-edit',
+                data: { turbo_frame: "modal" } %>
     <%= link_to l(:button_delete),
-                contact_employment_path(employment),
+                url_for(controller: 'contact_employments', action: 'destroy', id: employment.id),
                 data: { turbo_method: :delete, turbo_confirm: l(:text_are_you_sure) },
                 class: 'icon icon-del' %>
   </td>
